navbar-collapse fixed

--- a/versacore/src/components/MyNav.css
+++ b/versacore/src/components/MyNav.css
@@ -30,11 +30,12 @@ html {
 
 @media (max-width: 992px) {
     .navbar-scrolled {
-        width: 95%; /* Slightly wider on smaller screens */
+        width: 95%;
+        /* Slightly wider on smaller screens */
     }
 
     .navbar-collapse {
-        background-color: rgb(37, 20, 43);
+        background-color: rgb(46, 39, 49);
         text-align: center;
         border-radius: 15px;
         max-width: 200px;
